@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true

package util {
    class "componentized<T>" as componentized {
    }
    class "indexed_storage<T>" as indexed_storage {
    }
    class resource {
    }
}

package assets {
    class texture_id << (D,#FF7700) typedef >>
}

package rendering {
    class sprite {
    }
    class software_renderer {
    }
}

package math {
    class vec2 {
    }
    class segment {
    }
}

package geometry {

    class subsector {
        - lines : std::vector<util::indexed_storage<linedef>::id_t>
        - sprites : std::vector<rendering::sprite*>
        + add_sprite(spr : rendering::sprite*) : void
        + remove_sprite(spr : rendering::sprite*) : void
        + {static} load_from_bin(res : util::resource const&) : std::vector<subsector>
        -- Friends --
        friend rendering::software_renderer
    }

    class sector {
        - floor_height : float
        - ceiling_height : float
        - floor_tex : assets::texture_id
        - ceiling_tex : assets::texture_id
        - light_level : std::uint8_t
        + sector(fh : float, ch : float, ft : assets::texture_id, ct : assets::texture_id, light : std::uint8_t)
        + {static} load_from_bin(res : util::resource const&) : std::vector<sector>
        -- Friends --
        friend rendering::software_renderer
    }

    class sidedef {
        - facing_sector : util::indexed_storage<sector>::id_t
        - upper_tex : assets::texture_id
        - middle_tex : assets::texture_id
        - lower_tex : assets::texture_id
        + sidedef(sector : id_t, ut : assets::texture_id, mt : assets::texture_id, lt : assets::texture_id)
        + {static} load_from_bin(res : util::resource const&) : std::vector<sidedef>
        -- Friends --
        friend rendering::software_renderer
    }

    struct "bsp_node::bounding_box" as bounding_box {
        + top : float
        + bottom : float
        + left : float
        + right : float
    }

    class bsp_node {
        - pl_coord : math::vec2
        - pl_dir : math::vec2
        - front_box : bounding_box
        - back_box : bounding_box
        - front : util::indexed_storage<bsp_node>::id_t
        - back : util::indexed_storage<bsp_node>::id_t
        + is_front_leaf() : bool const
        + is_back_leaf() : bool const
        + get_front_index() : id_t const
        + get_back_index() : id_t const
        + is_pt_front_side(point : math::vec2 const&) : bool
        + {static} load_from_bin(res : util::resource const&) : std::vector<bsp_node>
        -- Friends --
        friend rendering::software_renderer
    }

    class linedef {
        - seg : math::segment
        - front : util::indexed_storage<sidedef>::id_t
        - back : util::indexed_storage<sidedef>::id_t
        + linedef(p0 : math::vec2 const, p1 : math::vec2 const, f : id_t, b : id_t)
        + {static} load_from_bin(res : util::resource const&) : std::vector<linedef>
        + is_wall() : bool const
        + is_portal() : bool const
        + dir() : math::vec2 const
        + len() : float const
        -- Friends --
        friend util::componentized<linedef>
        friend rendering::software_renderer
    }

    class monster_spawn {
        - type : std::uint32_t
        - pos : math::vec2
        - z : float
        + monster_spawn(t : std::uint32_t, p : math::vec2, height : float)
        + {static} load_from_bin(res : util::resource const&) : std::vector<monster_spawn>
        -- Friends --
        friend util::componentized<monster_spawn>
    }

    class pickup_spawn {
        - type : std::uint32_t
        - subtype : std::uint32_t
        - pos : math::vec2
        - z : float
        + pickup_spawn(t : std::uint32_t, st : std::uint32_t, p : math::vec2, height : float)
        + {static} load_from_bin(res : util::resource const&) : std::vector<pickup_spawn>
        -- Friends --
        friend util::componentized<pickup_spawn>
    }

    class map_data {
        + sectors : util::indexed_storage<sector>
        + sidedefs : util::indexed_storage<sidedef>
        + linedefs : util::indexed_storage<linedef>
        + subsectors : util::indexed_storage<subsector>
        + nodes : util::indexed_storage<bsp_node>
        + monster_spawns : std::vector<monster_spawn>
        + pickup_spawns : std::vector<pickup_spawn>
        + root_node_id : util::indexed_storage<bsp_node>::id_t
        + get_subsector_id(pt : math::vec2 const&) : id_t const
        + move_to(spr : rendering::sprite*, new_pos : math::vec2 const&) : void
        + {static} load_from_bin(...) : map_data
    }
}

'' Inheritance
util::componentized <|-- linedef
util::componentized <|-- monster_spawn
util::componentized <|-- pickup_spawn

'' Dependencies
map_data ..> util::indexed_storage
map_data ..> rendering::sprite
subsector ..> rendering::sprite
bsp_node ..> math::vec2
linedef ..> math::segment
sector ..> assets::texture_id
sidedef ..> assets::texture_id
monster_spawn ..> math::vec2
pickup_spawn ..> math::vec2

@enduml
